--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -6,10 +6,11 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_10_22" }
-bus-mapping = { git = "https://github.com/pinkiebell/zkevm-circuits.git", branch = "zkevm-chain" }
-eth-types = { git = "https://github.com/pinkiebell/zkevm-circuits.git", branch = "zkevm-chain" }
-zkevm-circuits = { git = "https://github.com/pinkiebell/zkevm-circuits.git", branch = "zkevm-chain", features = ["test"] }
-plonk_verifier = { git = "https://github.com/privacy-scaling-explorations/plonk-verifier.git", rev = "ba167b73ca09d77ab08958d4a4b4e0433222e4db" }
+bus-mapping = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "feature/root-circuit" }
+eth-types = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "feature/root-circuit" }
+zkevm-circuits = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "feature/root-circuit", features = ["test"] }
+snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier", tag = "v2022_12_23", default-features = false, features = ["loader_evm", "loader_halo2", "system_halo2"] }
+
 env_logger = "0.9.0"
 ethers-providers = "0.17.0"
 hyper = { version = "0.14.16", features = ["server"] }
@@ -25,7 +26,8 @@ itertools = "0.10.3"
 clap = { version = "4.0.14", features = ["derive", "env"] }
 
 # autogen
-mock = { git = "https://github.com/pinkiebell/zkevm-circuits.git", branch = "zkevm-chain", optional = true }
+mock = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "feature/root-circuit", optional = true  }
+
 ethers-signers = { version = "0.17.0", optional = true }
 zkevm_dev = { path = "../dev", optional = true }
 
