--- a/coordinator/Cargo.toml
+++ b/coordinator/Cargo.toml
@@ -8,9 +8,15 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0.15", features = ["derive", "env"] }
 env_logger = "0.9.0"
-ethers-core = "0.17.0"
-ethers-signers = "0.17.0"
-hyper = { version = "0.14.16", features = ["client", "server", "http1", "http2", "runtime"] }
+ethers-core = "1.0.2"
+ethers-signers = "1.0.2"
+hyper = { version = "0.14.16", features = [
+  "client",
+  "server",
+  "http1",
+  "http2",
+  "runtime",
+] }
 log = "0.4.14"
 rand = "0.8.4"
 serde = { version = "1.0.136", features = ["derive"] }
@@ -20,5 +26,10 @@ tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "time"] }
 zkevm_common = { path = "../common" }
 
 [dev-dependencies]
-tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "time", "parking_lot"] }
+tokio = { version = "1.16.1", features = [
+  "macros",
+  "rt-multi-thread",
+  "time",
+  "parking_lot",
+] }
 rust-lzma = "0.5.1"
