--- a/dev/Cargo.toml
+++ b/dev/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-eth-types = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "feature/root-circuit" }
+eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "taiko-pi-test" }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = { version = "1.0.78", features = ["preserve_order"] }
 
