--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -6,9 +6,9 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_10_22" }
-bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "taiko-pi-test" }
-eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "taiko-pi-test" }
-zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "taiko-pi-test", features = [
+bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a3_pi" }
+eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a3_pi" }
+zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a3_pi", features = [
   "test",
 ] }
 snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier", tag = "v2022_12_23", default-features = false, features = [
@@ -24,7 +24,7 @@ rand_xorshift = "0.3"
 log = "0.4.14"
 rand = "0.8.4"
 serde = { version = "1.0.136", features = ["derive"] }
-serde_json = "1.0.78"
+serde_json = "1.0.96"
 strum = "0.24"
 tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
 zkevm_common = { path = "../common" }
@@ -34,7 +34,7 @@ hex = "0.4.3"
 rlp = "0.5.2"
 
 # autogen
-mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "taiko-pi-test", optional = true }
+mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a3_pi", optional = true }
 
 ethers-signers = { version = "2.0.0", optional = true }
 zkevm_dev = { path = "../dev", optional = true }
