--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ halo2_wrong_ecc = { git = "https://github.com/appliedzkp/halo2wrong.git", tag = 
 halo2_wrong_integer = { git = "https://github.com/appliedzkp/halo2wrong.git", tag = "v2023_04_20", package = "integer" }
 halo2_wrong_maingate = { git = "https://github.com/appliedzkp/halo2wrong.git", tag = "v2023_04_20", package = "maingate" }
 
-#[patch."https://github.com/privacy-scaling-explorations/zkevm-circuits.git"]
-#bus-mapping = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", branch = "zkevm-chain" }
-#eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", branch = "zkevm-chain" }
-#zkevm-circuits = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", branch = "zkevm-chain" }
-#mock = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", branch = "zkevm-chain" }
+#[patch."https://github.com/taikoxyz/zkevm-circuits.git"]
+#bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "recursion" }
+#eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "recursion" }
+#zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "recursion" }
+#mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "recursion" }
