--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,8 +6,10 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "recursion", features = ["warn-unimplemented"] }
+zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "recursion" }
 hyper = { version = "0.14.16", features = ["server"] }
 log = "0.4.14"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.78"
 tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
+hex = "0.4.3"
