use hex string proof instead of U256

--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -25,6 +25,7 @@ tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
 zkevm_common = { path = "../common" }
 itertools = "0.10.3"
 clap = { version = "4.0.14", features = ["derive", "env"] }
+hex = "0.4.3"
 
 # autogen
 mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "recursion", optional = true }
