--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -6,14 +6,15 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
-bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", features = ["test"] }
-eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", features = ["warn-unimplemented"] }
-zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", features = ["test-circuits"] }
+bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", features = ["test"] }
+eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", features = ["warn-unimplemented"] }
+zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", features = ["test-circuits"] }
 snark-verifier = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = ["loader_halo2", "system_halo2", "loader_evm", "parallel"] }
 snark-verifier-sdk = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = ["loader_halo2", "loader_evm", "parallel", "display", "halo2_circuit_params"] }
 
 env_logger = "0.9.0"
 ethers-providers = "2.0.0"
+ethers-core = "2.0.0"
 hyper = { version = "0.14.16", features = ["server"] }
 rand_xorshift = "0.3"
 log = "0.4.14"
@@ -28,7 +29,7 @@ clap = { version = "4.0.14", features = ["derive", "env"] }
 hex = "0.4.3"
 
 # autogen
-mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", optional = true }
+mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", optional = true }
 ethers-signers = { version = "2.0.0", optional = true }
 zkevm_dev = { path = "../dev", optional = true }
 paste = { version = "1.0.11", optional = true }
