update chain & ref lib

--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -9,6 +9,7 @@ halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.gi
 bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", features = ["test"] }
 eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", features = ["warn-unimplemented"] }
 zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", features = ["test-circuits"] }
+circuit-benchmarks = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", features = [] }
 snark-verifier = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = ["loader_halo2", "system_halo2", "loader_evm", "parallel"] }
 snark-verifier-sdk = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = ["loader_halo2", "loader_evm", "parallel", "display", "halo2_circuit_params"] }
 
