--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -6,10 +6,10 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
-bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", features = ["test"] }
-eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", features = ["warn-unimplemented"] }
-zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", features = ["test-circuits"] }
-circuit-benchmarks = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", features = [] }
+bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = ["test"] }
+eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = ["warn-unimplemented"] }
+zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = ["test-circuits"] }
+circuit-benchmarks = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = [] }
 snark-verifier = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = ["loader_halo2", "system_halo2", "loader_evm", "parallel"] }
 snark-verifier-sdk = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = ["loader_halo2", "loader_evm", "parallel", "display", "halo2_circuit_params"] }
 
@@ -30,7 +30,7 @@ clap = { version = "4.0.14", features = ["derive", "env"] }
 hex = "0.4.3"
 
 # autogen
-mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet-pi", optional = true }
+mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", optional = true }
 ethers-signers = { version = "2.0.0", optional = true }
 zkevm_dev = { path = "../dev", optional = true }
 paste = { version = "1.0.11", optional = true }
