--- a/dev/Cargo.toml
+++ b/dev/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = ["warn-unimplemented"] }
+eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", features = [
+  "warn-unimplemented",
+] }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = { version = "1.0.78", features = ["preserve_order"] }
 
