--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -6,16 +6,17 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
-bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = [
+bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", features = [
   "test",
 ] }
-eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = [
+eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", features = [
   "warn-unimplemented",
 ] }
-zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = [
+zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", features = [
   "test-circuits",
 ] }
-circuit-benchmarks = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = [
+circuit-benchmarks = { git = "https://github.com/taikoxyz/zkevm-circuits.git", features = [
+  "benches",
 ] }
 snark-verifier = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = [
   "loader_halo2",
@@ -49,7 +50,7 @@ hex = "0.4.3"
 lazy_static = "1.4"
 
 # autogen
-mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", optional = true }
+mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", optional = true }
 ethers-signers = { version = "2.0.0", optional = true }
 zkevm_dev = { path = "../dev", optional = true }
 paste = { version = "1.0.11", optional = true }
