generate verification contract locally by a new feature evm-verifier
Signed-off-by: smtmfft <smtm@taiko.xyz>

--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -58,3 +58,4 @@ paste = { version = "1.0.11", optional = true }
 [features]
 default = []
 autogen = ["mock", "ethers-signers", "zkevm_dev", "paste"]
+evm-verifier = []
