--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ opt-level = 3
 lto = "thin"
 
 [patch."https://github.com/privacy-scaling-explorations/halo2.git"]
-halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", tag = "v2023_04_20", package = "halo2_proofs" }
+#halo2_proofs = { path = "../../../taiko-halo2/halo2_proofs" }
+halo2_proofs = { git = "https://github.com/taikoxyz/halo2.git", branch = "taiko/unstable" }
 
 
 # [patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
@@ -18,14 +19,14 @@ halo2_wrong_integer = { git = "https://github.com/appliedzkp/halo2wrong.git", ta
 halo2_wrong_maingate = { git = "https://github.com/appliedzkp/halo2wrong.git", tag = "v2023_04_20", package = "maingate" }
 
 [patch."https://github.com/taikoxyz/zkevm-circuits.git"]
-bus-mapping = { git = "https://github.com/smtmfft/zkevm-circuits.git ", branch = "for-a6-release", features = [
-  "test",
-]}
-circuit-benchmarks = { git = "https://github.com/smtmfft/zkevm-circuits.git ", branch = "for-a6-release", features = [
+bus-mapping = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile", features = [
+    "test",
+] }
+circuit-benchmarks = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile", features = [
     "benches",
 ] }
-eth-types = { git = "https://github.com/smtmfft/zkevm-circuits.git ", branch = "for-a6-release", features = [
+eth-types = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile", features = [
     "warn-unimplemented",
 ] }
-zkevm-circuits = { git = "https://github.com/smtmfft/zkevm-circuits.git ", branch = "for-a6-release" }
-mock = { git = "https://github.com/smtmfft/zkevm-circuits.git ", branch = "for-a6-release" }
+zkevm-circuits = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile" }
+mock = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile" }
