--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,20 +13,20 @@ halo2_proofs = { git = "https://github.com/taikoxyz/halo2.git", branch = "taiko/
 # [patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
 # halo2_curves = { git = "https://github.com/appliedzkp/halo2curves.git", tag = "0.3.3", package = "halo2curves" }
 
-[patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
-halo2_wrong_ecc = { git = "https://github.com/appliedzkp/halo2wrong.git", tag = "v2023_04_20", package = "ecc" }
-halo2_wrong_integer = { git = "https://github.com/appliedzkp/halo2wrong.git", tag = "v2023_04_20", package = "integer" }
-halo2_wrong_maingate = { git = "https://github.com/appliedzkp/halo2wrong.git", tag = "v2023_04_20", package = "maingate" }
+# [patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
+# halo2_wrong_ecc = { git = "https://github.com/appliedzkp/halo2wrong.git", tag = "v2023_04_20", package = "ecc" }
+# halo2_wrong_integer = { git = "https://github.com/appliedzkp/halo2wrong.git", tag = "v2023_04_20", package = "integer" }
+# halo2_wrong_maingate = { git = "https://github.com/appliedzkp/halo2wrong.git", tag = "v2023_04_20", package = "maingate" }
 
-[patch."https://github.com/taikoxyz/zkevm-circuits.git"]
-bus-mapping = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile", features = [
-    "test",
-] }
-circuit-benchmarks = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile", features = [
-    "benches",
-] }
-eth-types = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile", features = [
-    "warn-unimplemented",
-] }
-zkevm-circuits = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile" }
-mock = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile" }
+# [patch."https://github.com/taikoxyz/zkevm-circuits.git"]
+# bus-mapping = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile", features = [
+#     "test",
+# ] }
+# circuit-benchmarks = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile", features = [
+#     "benches",
+# ] }
+# eth-types = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile", features = [
+#     "warn-unimplemented",
+# ] }
+# zkevm-circuits = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile" }
+# mock = { git = "https://github.com/smtmfft/zkevm-circuits.git", branch = "fix-compile" }
