--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -6,30 +6,30 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
-bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", features = [
-  "test",
+bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/for-a6-release", features = [
+    "test",
 ] }
-eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", features = [
-  "warn-unimplemented",
+eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/for-a6-release", features = [
+    "warn-unimplemented",
 ] }
-zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", features = [
-  "test-circuits",
+zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/for-a6-release", features = [
+    "test-circuits",
 ] }
-circuit-benchmarks = { git = "https://github.com/taikoxyz/zkevm-circuits.git", features = [
-  "benches",
+circuit-benchmarks = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/for-a6-release", features = [
+    "benches",
 ] }
-snark-verifier = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = [
-  "loader_halo2",
-  "system_halo2",
-  "loader_evm",
-  "parallel",
+snark-verifier = { git = "https://github.com/taikoxyz/snark-verifier.git", branch = "a6-integration", default-features = false, features = [
+    "loader_halo2",
+    "system_halo2",
+    "loader_evm",
+    "parallel",
 ] }
-snark-verifier-sdk = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = [
-  "loader_halo2",
-  "loader_evm",
-  "parallel",
-  "display",
-  "halo2_circuit_params",
+snark-verifier-sdk = { git = "https://github.com/taikoxyz/snark-verifier.git", branch = "a6-integration", default-features = false, features = [
+    "loader_halo2",
+    "loader_evm",
+    "parallel",
+    "display",
+    "halo2_circuit_params",
 ] }
 
 env_logger = "0.9.0"
@@ -50,7 +50,7 @@ hex = "0.4.3"
 lazy_static = "1.4"
 
 # autogen
-mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", optional = true }
+mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/for-a6-release", optional = true }
 ethers-signers = { version = "2.0.0", optional = true }
 zkevm_dev = { path = "../dev", optional = true }
 paste = { version = "1.0.11", optional = true }
@@ -59,3 +59,4 @@ paste = { version = "1.0.11", optional = true }
 default = []
 autogen = ["mock", "ethers-signers", "zkevm_dev", "paste"]
 evm-verifier = []
+eip-1559-only = []
